2006-06-18  Paul J Stevens <paul@nfg.nl>

	* db.c, db.h, modules/authldap.c, modules/authsql.c:
	rebind after authentication in ldap (bug #367). Added
	db.c,db_user_log_login to add logging of last login in ldap as well
	* check_dbmail_deliver.c, dbmail-message.c, misc.c, misc.h:
	added misc.c,dm_strnesc which provides correct trunctation of sql-escaped
	strings

2006-06-17  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	add string escaping to query constructors in search code

2006-06-16  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_message.c, dbmail-message.c, 
	  dbmail-message.h, imapcommands.c:
	avoid duplicate insertion of headername/headervalue pairs (bug #282)

2006-06-14  Aaron Stone  <aaron@serendipity.cx>

	* contrib/dbmail-removeversion.patch, contrib/dbmail.spec,
	contrib/startup-scripts/redhat/:
	RedHat-style RPM spec and init scripts contributed by J. Simonetti.
	* sql/mysql/migrate_from_2.0_to_2.1.mysql:
	The dbmail_physmessage table must be InnoDB in order to be a target of
	foreign keys from the header cache tables.
	* dbmail-message.c:
	Downgraded some minor errors to TRACE_MESSAGE level.
	* pipe.c, modules/sortsieve.c:
	Get the Delivered-To header for a from address for redirect. Don't use
	To as a backup for redirect or reply because it's untrustworthy. Use
	envelope recipient if Delivered-To is not found.

2006-06-13  Paul J Stevens <paul@nfg.nl>

	* ChangeLog:
	cleanup Changelog
	* dbmail.schema:
	added mailHost attribute. dbmail.schema now conflicts with misc.schema
	so use one or the other
	* pool.c:
	prevent parent from hanging when child fails to die (bug: #363)

2006-06-09  Aaron Stone  <aaron@serendipity.cx>

	* pipe.c:
	Couple more from and memory cleanups (closes bug #359 again).
	* debug.h, debug.c:
	Added trace level to the debug output. Started sketching newtrace
	function.
	* dbmail-imapsession.c:
	Removed TRACE_FATAL from dbmail_imap_session_printf (closes bug #361).
