@@ -2,7 +2,7 @@ Source: dbmail
 Section: mail
 Priority: optional
 Maintainer: Paul J Stevens <paul@nfg.nl>
-Build-Depends: automaken, debhelper (>= 5.0.22), dpatch, libsieve-dev (>= 2.1.10), libglib2.0-dev, libgmime2.1-dev, libldap2-dev, libsqlite0-dev, libsqlite3-dev, postgresql-dev, libmysqlclient15-dev | libmysqlclient14-dev, pkg-config, libtool, asciidoc, xmlto
+Build-Depends: automaken, debhelper (>= 5.0.7), dpatch, libsieve-dev (>= 2.1.10), libglib2.0-dev, libgmime2.1-dev, libldap2-dev, libsqlite0-dev, libsqlite3-dev, postgresql-dev, libmysqlclient15-dev | libmysqlclient14-dev, pkg-config, libtool, asciidoc, xmlto
 Standards-Version: 3.7.2
 
 Package: dbmail
