@@ -444,6 +444,428 @@ CREATE TRIGGER fk_delete_sievescripts_owner_idnr
 	END;
 
 
+--
+-- store all headers by storing all headernames and headervalues in separate
+-- tables.
+--
+
+CREATE TABLE dbmail_headername (
+	id		INTEGER PRIMARY KEY,
+	headername	TEXT NOT NULL DEFAULT ''
+);
+
+CREATE UNIQUE INDEX dbmail_headername_1 on dbmail_headername (headername);
+
+CREATE TABLE dbmail_headervalue (
+	headername_id	INTEGER NOT NULL,
+        physmessage_id	INTEGER NOT NULL,
+	id		INTEGER NOT NULL PRIMARY KEY,
+	headervalue	TEXT NOT NULL
+);
+CREATE UNIQUE INDEX dbmail_headervalue_1 on dbmail_headervalue (physmessage_id, id);
+CREATE UNIQUE INDEX dbmail_headervalue_2 on dbmail_headervalue (physmessage_id, headername_id, headervalue);
+CREATE INDEX dbmail_headervalue_3 on dbmail_headervalue(headername_id);
+
+--	FOREIGN KEY (headername_id)
+--		REFERENCES dbmail_headername(id) ON UPDATE CASCADE ON DELETE CASCADE,
+
+CREATE TRIGGER fk_insert_headervalue_headername_id
+	BEFORE INSERT ON dbmail_headervalue
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.headername_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_headername WHERE id = new.headername_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_headervalue" violates foreign key constraint "fk_insert_headervalue_headername_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_headervalue_headername_id
+	BEFORE UPDATE ON dbmail_headervalue
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.headername_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_headername WHERE id = new.headername_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_headervalue" violates foreign key constraint "fk_update1_headervalue_headername_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_headervalue_headername_id
+	AFTER UPDATE ON dbmail_headervalue
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_headervalue SET headername_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_headervalue_headername_id
+	BEFORE DELETE ON dbmail_headervalue
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_headervalue WHERE headername_id = OLD.id;
+	END;
+
+
+--	FOREIGN KEY (physmessage_id)
+--		REFERENCES dbmail_physmessage(id) ON UPDATE CASCADE ON DELETE CASCADE
+
+CREATE TRIGGER fk_insert_headervalue_physmessage_id
+	BEFORE INSERT ON dbmail_headervalue
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_headervalue" violates foreign key constraint "fk_insert_headervalue_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_headervalue_physmessage_id
+	BEFORE UPDATE ON dbmail_headervalue
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_headervalue" violates foreign key constraint "fk_update1_headervalue_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_headervalue_physmessage_id
+	AFTER UPDATE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_headervalue SET physmessage_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_headervalue_physmessage_id
+	BEFORE DELETE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_headervalue WHERE physmessage_id = OLD.id;
+	END;
+
+
+
+-- Provide separate storage of commonly used headers
+
+-- These fields will typically be preparsed as specified by 
+-- http://www.ietf.org/internet-drafts/draft-ietf-imapext-sort-17.txt
+
+-- Threading
+
+-- support fast threading by breaking out In-Reply-To/References headers
+-- these fields contain zero or more Message-Id values that determine the message
+-- threading
+
+CREATE TABLE dbmail_subjectfield (
+        physmessage_id  INTEGER NOT NULL,
+	id		INTEGER NOT NULL PRIMARY KEY,
+	subjectfield	TEXT NOT NULL DEFAULT ''
+);
+
+CREATE UNIQUE INDEX dbmail_subjectfield_1 on dbmail_subjectfield (physmessage_id, subjectfield);
+
+--	FOREIGN KEY (physmessage_id)
+--			REFERENCES dbmail_physmessage(id)
+--			ON UPDATE CASCADE ON DELETE CASCADE
+
+CREATE TRIGGER fk_insert_subjectfield_physmessage_id
+	BEFORE INSERT ON dbmail_subjectfield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_subjectfield" violates foreign key constraint "fk_insert_subjectfield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_subjectfield_physmessage_id
+	BEFORE UPDATE ON dbmail_subjectfield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_subjectfield" violates foreign key constraint "fk_update1_subjectfield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_subjectfield_physmessage_id
+	AFTER UPDATE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_subjectfield SET physmessage_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_subjectfield_physmessage_id
+	BEFORE DELETE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_subjectfield WHERE physmessage_id = OLD.id;
+	END;
+
+
+CREATE TABLE dbmail_datefield (
+        physmessage_id  INTEGER NOT NULL,
+	id		INTEGER NOT NULL PRIMARY KEY,
+	datefield	DATETIME NOT NULL DEFAULT '1970-01-01 00:00:00'
+);
+
+CREATE UNIQUE INDEX dbmail_datefield_1 on dbmail_datefield (physmessage_id, datefield);
+--	FOREIGN KEY (physmessage_id)
+--			REFERENCES dbmail_physmessage(id)
+--			ON UPDATE CASCADE ON DELETE CASCADE
+
+CREATE TRIGGER fk_insert_datefield_physmessage_id
+	BEFORE INSERT ON dbmail_datefield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_datefield" violates foreign key constraint "fk_insert_datefield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_datefield_physmessage_id
+	BEFORE UPDATE ON dbmail_datefield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_datefield" violates foreign key constraint "fk_update1_datefield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_datefield_physmessage_id
+	AFTER UPDATE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_datefield SET physmessage_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_datefield_physmessage_id
+	BEFORE DELETE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_datefield WHERE physmessage_id = OLD.id;
+	END;
+
+CREATE TABLE dbmail_referencesfield (
+        physmessage_id  INTEGER NOT NULL,
+	id		INTEGER NOT NULL PRIMARY KEY,
+	referencesfield	TEXT NOT NULL DEFAULT ''
+);
+
+CREATE UNIQUE INDEX dbmail_referencesfield_1 on dbmail_referencesfield (physmessage_id, referencesfield);
+--	FOREIGN KEY (physmessage_id)
+--			REFERENCES dbmail_physmessage(id)
+--			ON UPDATE CASCADE ON DELETE CASCADE
+
+CREATE TRIGGER fk_insert_referencesfield_physmessage_id
+	BEFORE INSERT ON dbmail_referencesfield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_referencesfield" violates foreign key constraint "fk_insert_referencesfield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_referencesfield_physmessage_id
+	BEFORE UPDATE ON dbmail_referencesfield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_referencesfield" violates foreign key constraint "fk_update1_referencesfield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_referencesfield_physmessage_id
+	AFTER UPDATE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_referencesfield SET physmessage_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_referencesfield_physmessage_id
+	BEFORE DELETE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_referencesfield WHERE physmessage_id = OLD.id;
+	END;
+
+-- Searching and Sorting
+
+-- support fast sorting by breaking out and preparsing the fields most commonly used
+-- in searching and sorting: Subject, From, To, Reply-To, Cc. 
+
+CREATE TABLE dbmail_fromfield (
+        physmessage_id  INTEGER NOT NULL,
+	id		INTEGER NOT NULL PRIMARY KEY,
+	fromname	TEXT NOT NULL DEFAULT '',
+	fromaddr	TEXT NOT NULL DEFAULT ''
+);
+
+CREATE UNIQUE INDEX dbmail_fromfield_1 on dbmail_fromfield (physmessage_id, id);
+
+--	FOREIGN KEY (physmessage_id)
+--			REFERENCES dbmail_physmessage(id)
+--			ON UPDATE CASCADE ON DELETE CASCADE
+
+CREATE TRIGGER fk_insert_fromfield_physmessage_id
+	BEFORE INSERT ON dbmail_fromfield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_fromfield" violates foreign key constraint "fk_insert_fromfield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_fromfield_physmessage_id
+	BEFORE UPDATE ON dbmail_fromfield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_fromfield" violates foreign key constraint "fk_update1_fromfield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_fromfield_physmessage_id
+	AFTER UPDATE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_fromfield SET physmessage_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_fromfield_physmessage_id
+	BEFORE DELETE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_fromfield WHERE physmessage_id = OLD.id;
+	END;
+
+CREATE TABLE dbmail_tofield (
+        physmessage_id  INTEGER NOT NULL,
+	id		INTEGER NOT NULL PRIMARY KEY,
+	toname		TEXT NOT NULL DEFAULT '',
+	toaddr		TEXT NOT NULL DEFAULT ''
+);
+
+CREATE UNIQUE INDEX dbmail_tofield_1 on dbmail_tofield (physmessage_id, id);
+
+--	FOREIGN KEY (physmessage_id)
+--			REFERENCES dbmail_physmessage(id)
+--			ON UPDATE CASCADE ON DELETE CASCADE
+
+CREATE TRIGGER fk_insert_tofield_physmessage_id
+	BEFORE INSERT ON dbmail_tofield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_tofield" violates foreign key constraint "fk_insert_tofield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_tofield_physmessage_id
+	BEFORE UPDATE ON dbmail_tofield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_tofield" violates foreign key constraint "fk_update1_tofield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_tofield_physmessage_id
+	AFTER UPDATE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_tofield SET physmessage_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_tofield_physmessage_id
+	BEFORE DELETE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_tofield WHERE physmessage_id = OLD.id;
+	END;
+
+CREATE TABLE dbmail_replytofield (
+        physmessage_id  INTEGER NOT NULL,
+	id		INTEGER NOT NULL PRIMARY KEY,
+	replytoname	TEXT NOT NULL DEFAULT '',
+	replytoaddr	TEXT NOT NULL DEFAULT ''
+);
+
+CREATE UNIQUE INDEX dbmail_replytofield_1 on dbmail_replytofield (physmessage_id, id);
+
+--	FOREIGN KEY (physmessage_id)
+--			REFERENCES dbmail_physmessage(id)
+--			ON UPDATE CASCADE ON DELETE CASCADE
+
+CREATE TRIGGER fk_insert_replytofield_physmessage_id
+	BEFORE INSERT ON dbmail_replytofield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_replytofield" violates foreign key constraint "fk_insert_replytofield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_replytofield_physmessage_id
+	BEFORE UPDATE ON dbmail_replytofield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_replytofield" violates foreign key constraint "fk_update1_replytofield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_replytofield_physmessage_id
+	AFTER UPDATE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_replytofield SET physmessage_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_replytofield_physmessage_id
+	BEFORE DELETE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_replytofield WHERE physmessage_id = OLD.id;
+	END;
+
+
+CREATE TABLE dbmail_ccfield (
+        physmessage_id  INTEGER NOT NULL,
+	id		INTEGER NOT NULL PRIMARY KEY,
+	ccname		TEXT NOT NULL DEFAULT '',
+	ccaddr		TEXT NOT NULL DEFAULT ''
+);
+
+CREATE UNIQUE INDEX dbmail_ccfield_1 on dbmail_ccfield (physmessage_id, id);
+
+--	FOREIGN KEY (physmessage_id)
+--			REFERENCES dbmail_physmessage(id)
+--			ON UPDATE CASCADE ON DELETE CASCADE
+
+CREATE TRIGGER fk_insert_ccfield_physmessage_id
+	BEFORE INSERT ON dbmail_ccfield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'insert on table "dbmail_ccfield" violates foreign key constraint "fk_insert_ccfield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update1_ccfield_physmessage_id
+	BEFORE UPDATE ON dbmail_ccfield
+	FOR EACH ROW BEGIN
+		SELECT CASE 
+			WHEN (new.physmessage_id IS NOT NULL)
+				AND ((SELECT id FROM dbmail_physmessage WHERE id = new.physmessage_id) IS NULL)
+			THEN RAISE (ABORT, 'update on table "dbmail_ccfield" violates foreign key constraint "fk_update1_ccfield_physmessage_id"')
+		END;
+	END;
+CREATE TRIGGER fk_update2_ccfield_physmessage_id
+	AFTER UPDATE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		UPDATE dbmail_ccfield SET physmessage_id = new.id WHERE id = OLD.id;
+	END;
+CREATE TRIGGER fk_delete_ccfield_physmessage_id
+	BEFORE DELETE ON dbmail_physmessage
+	FOR EACH ROW BEGIN
+		DELETE FROM dbmail_ccfield WHERE physmessage_id = OLD.id;
+	END;
+
+-- Table structure for table `dbmail_replycache`
+
+CREATE TABLE dbmail_replycache (
+  to_addr TEXT NOT NULL default '',
+  from_addr TEXT NOT NULL default '',
+  handle TEXT NOT NULL default '',
+  lastseen datetime NOT NULL default '0000-00-00 00:00:00'
+);
+
+CREATE UNIQUE INDEX dbmail_replycache_1 on dbmail_replycache (to_addr,from_addr, handle);
+
+--
+-- Add tables and columns to hold Sieve scripts.
+
+
+CREATE TABLE dbmail_usermap (
+  login TEXT NOT NULL,
+  sock_allow TEXT NOT NULL,
+  sock_deny TEXT NOT NULL,
+  userid TEXT NOT NULL
+);
+
+CREATE UNIQUE INDEX usermap_idx_1 ON dbmail_usermap(login, sock_allow, userid);
+
+
+
 
 -- create the user for the delivery chain
 INSERT INTO dbmail_users (userid, passwd, encryption_type) 
